--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
@@ -12,7 +12,7 @@
 }
 
 .sidebar-content .participant-color {
-  color: #478EBA;
+  color: #224F83;
   font-weight: bold;
   padding-bottom: 0.3rem;
 }
