--- a/ui/src/app/cohort-review/annotation-list/annotation-list.component.css
+++ b/ui/src/app/cohort-review/annotation-list/annotation-list.component.css
@@ -1,6 +1,6 @@
 .annotations-container{
   padding: 0.25rem 0.125rem 0 0.125rem;
-  margin: 0.25rem 0.125rem 0.25rem 0;
+  /*margin: 0.25rem 0.125rem 0.25rem 0;*/
   /*display: flex;*/
   /*justify-content: space-between;*/
   /*align-items: center;*/
@@ -13,7 +13,7 @@ div > h4 {
 }
 
 .annotations-color {
-  color: #478EBA;
+  color: #224F83;
   font-weight: bold;
   padding-bottom: 0.3rem;
 }
