--- a/ui/src/app/cohort-review/participant-status/participant-status.component.css
+++ b/ui/src/app/cohort-review/participant-status/participant-status.component.css
@@ -8,9 +8,15 @@
 .btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
     border : 1px solid #C3C3C3;
     color: #4A4A4A;
+    background: #FFFFFF;
 }
 
 .dropdown .dropdown-toggle.btn clr-icon[shape^=caret] {
     color: #C3C3C3;
+}
+
+.dropdown-menu {
+    margin-top: -0.35rem;
+    width:10rem;
 }
 
