--- a/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.css
+++ b/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.css
@@ -24,7 +24,7 @@
     margin-top: -0.7rem;
     width:452px;
     /*max-height:15rem;*/
-    /*min-height: 12rem;*/
+    min-height: 12rem;
 }
 .modal-dialog{
     width: 452px!important;
