--- a/ui/src/app/views/workspace-list/component.html
+++ b/ui/src/app/views/workspace-list/component.html
@@ -36,22 +36,99 @@
       <div class="create-workspace-text">Create a New Workspace</div>
       <clr-icon class="plus-circle" shape="plus-circle"></clr-icon>
     </div>
-    <div class="card workspace-card" *ngFor="let workspaceResponse of workspaceList" routerLink="{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
-      <h5 class="workspace-name">{{workspaceResponse.workspace.name}}</h5>
-      <div class="description">{{workspaceResponse.workspace.description}}</div>
+    <div class="card workspace-card" *ngFor="let workspacePermissions of workspaceList">
+
+      <div class="header-area">
+
+        <clr-dropdown [clrCloseMenuOnItemClick]="false">
+          <button type="button" [disabled]="actionsDisabled" clrDropdownTrigger>
+            <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical" [class.disabled]="actionsDisabled"></clr-icon>
+          </button>
+
+
+          <clr-dropdown-menu *clrIfOpen>
+
+
+            <button class="action-item"
+                    routerLink="/workspaces/{{workspacePermissions.workspace.namespace}}/{{workspacePermissions.workspace.id}}/clone"
+                    routerLinkActive="active">
+              <clr-icon shape="copy"></clr-icon>
+              Clone
+            </button>
+
+
+            <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-right">
+              <button class="action-item"
+                      [disabled]="!workspacePermissions.canWrite"
+                      [class.disabled]="!workspacePermissions.canWrite"
+                      routerLink="/workspaces/{{workspacePermissions.workspace.namespace}}/{{workspacePermissions.workspace.id}}/edit"
+                      routerLinkActive="active">
+                <clr-icon shape="pencil"></clr-icon>
+                Edit
+              </button>
+              <span *ngIf="!workspacePermissions.canWrite" class="tooltip-content">Requires Write Permission</span>
+            </span>
+
+
+
+            <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
+              <button class="action-item"
+                      [disabled]="!workspacePermissions.isOwner"
+                      [class.disabled]="!workspacePermissions.isOwner"
+                      (click)="share(workspacePermissions.workspace, workspacePermissions.accessLevel)">
+                <clr-icon shape="share"></clr-icon>
+                Share
+              </button>
+              <span *ngIf="!workspacePermissions.isOwner" class="tooltip-content">
+                Owner access is required to share the workspace.
+              </span>
+            </span>
+
+
+
+            <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-right">
+              <button class="action-item"
+                      [disabled]="!workspacePermissions.isOwner"
+                      [class.disabled]="!workspacePermissions.isOwner"
+                      (click)="confirmDelete(workspacePermissions.workspace)">
+                <clr-icon shape="trash"></clr-icon>
+                Delete
+              </button>
+              <span *ngIf="!workspacePermissions.isOwner" class="tooltip-content">Requires Owner Permission</span>
+            </span>
+
+
+
+          </clr-dropdown-menu>
+        </clr-dropdown>
+
+
+        <div class="workspace-name" routerLink="{{workspacePermissions.workspace.namespace}}/{{workspacePermissions.workspace.id}}">
+          {{workspacePermissions.workspace.name}}
+        </div>
+
+
+      </div>
+
+
+
+
+
+
+      <div class="description">{{workspacePermissions.workspace.description}}</div>
       <div class="status-text">
-        <div style="color: #f8c954" *ngIf="(workspaceResponse.workspace.researchPurpose.reviewRequested === true && workspaceResponse.workspace.researchPurpose.approved === null) else rejected">
+        <div style="color: #f8c954" *ngIf="workspacePermissions.isPending; else rejected">
           <clr-icon shape="exclamation-triangle" class="is-solid" style="fill: #f8c954"></clr-icon>
           Pending Approval
         </div>
         <ng-template #rejected>
-          <div style="color: #f58771" *ngIf="(workspaceResponse.workspace.researchPurpose.reviewRequested === true && workspaceResponse.workspace.researchPurpose.approved === false) else permissions">
+          <div style="color: #f58771" *ngIf="workspacePermissions.isRejected; else permissions">
             <clr-icon shape="exclamation-triangle" class="is-solid" style="fill: #f58771"></clr-icon>
             Rejected
           </div>
         </ng-template>
         <ng-template #permissions>
-          <div style="color: #8bc990" *ngIf="workspaceResponse.accessLevel === workspaceAccessLevel.READER">
+          <div style="color: #8bc990" *ngIf="workspacePermissions.isReadOnly">
             <clr-icon shape="search" style="fill: #8bc990"></clr-icon>
             Read Only
           </div>
@@ -59,10 +136,19 @@
       </div>
       <div class="date-text">
         Last Changed:<br>
-        {{workspaceResponse.workspace.lastModifiedTime | date:'short'}}
+        {{workspacePermissions.workspace.lastModifiedTime | date:'short'}}
       </div>
       <!-- TODO: Add collaborator pictures. -->
       <!-- TODO: Add view of locked workspace when that functionality exists. -->
     </div>
   </div>
 </div>
+<app-workspace-share [workspace]="selectedWorkspace" [accessLevel]="accessLevel"></app-workspace-share>
+<clr-modal [(clrModalOpen)]="workspaceDeletionError">
+  <h3 class="modal-title">Error:</h3>
+  <div class="modal-body">Could not delete workspace '{{workspace.name}}'. Please <a (click)="submitWorkspaceDeleteBugReport()">submit a bug report.</a></div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="workspaceDeletionError = false">Ok</button>
+  </div>
+</clr-modal>
+<app-confirm-delete-modal [resourceType]="'workspace'" [resource]="resource" (receiveDelete)="receiveDelete($event)"></app-confirm-delete-modal>
