--- a/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
+++ b/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
@@ -10,7 +10,12 @@
     type="button"
     class="btn btn-icon btn-link"
     (click)="openManager()">
-    <clr-icon shape="plus-circle" size="24" title="Manage Annotations"></clr-icon>
+    <clr-icon shape="plus-circle" size="21" title="Manage Annotations"></clr-icon>
+  </button>
+  <button
+          type="button"
+          class="btn btn-icon btn-link">
+    Edit
   </button>
 </div>
 
