--- a/ui/src/app/cohort-review/participant-status/participant-status.component.html
+++ b/ui/src/app/cohort-review/participant-status/participant-status.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <label for="status-selector">
+  <label class="status" for="status-selector">
     Choose a Review Status for Participant {{ participant.id }}
   </label>
   <div>
