--- a/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
+++ b/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
@@ -16,8 +16,8 @@
 
     <!-- Show the set annotation list -->
     <!--<div *ngIf="mode === 'list'">-->
-    <!--<div *ngIf="mode === 'list'">-->
-      <!--<app-set-annotation-list></app-set-annotation-list>-->
-    <!--</div>-->
+    <div *ngIf="mode === 'list'">
+      <app-set-annotation-list></app-set-annotation-list>
+    </div>
   </div>
 </clr-modal>
