--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
@@ -2,19 +2,19 @@
   <h4 class="participant-color">Participant {{ participant?.participantId }}</h4>
   <div class="demographics-info">
     <div class="participant-flex">
-      <div class="participant-info">DOB:</div>
+      <div class="participant-info">DOB:&nbsp;</div>
       <div>{{ participant.birthDate }}</div>
     </div>
     <div class="participant-flex">
-      <div class="participant-info">Gender:</div>
+      <div class="participant-info">Gender:&nbsp; </div>
       <div>{{ participant.gender | titlecase }}</div>
     </div>
     <div class="participant-flex">
-      <div class="participant-info">Race:</div>
+      <div class="participant-info">Race:&nbsp; </div>
       <div>{{ participant.race }}</div>
     </div>
     <div class="participant-flex">
-      <div class="participant-info">Ethnicity:</div>
+      <div class="participant-info">Ethnicity:&nbsp; </div>
       <div>{{ participant.ethnicity }}</div>
     </div>
   </div>
