--- a/ui/src/app/cohort-review/annotation-item/annotation-item.component.css
+++ b/ui/src/app/cohort-review/annotation-item/annotation-item.component.css
@@ -34,7 +34,7 @@ input[type=text]:not([readonly]):focus {
   border-radius: 7px;
   background: #FFFFFF;
   padding-top: 0.4rem;
-  padding-left: 0.4rem;
+  padding-left: 0.6rem;
   padding-right: 1.5rem;
   height:7vh;
   width:15.3rem;
@@ -67,4 +67,62 @@ input[type=text]:not([readonly]):focus {
 .dropdown-menu {
   margin-top: -0.35rem;
   width:10rem;
+}
+
+.checkbox-container {
+  position: relative;
+  margin-top: 0.9rem;
+  margin-bottom:0.9rem;
+}
+
+.checkbox-container  .checkbox-style{
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  left: 7.4rem;
+  top: 0rem;
+}
+
+.integer-style {
+  width: 6rem;
+  border:  1px solid #C3C3C3;
+  border-radius: 0.2rem;
+  background-color: #FFFFFF!important;
+  text-align: right;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+}
+
+.items-date {
+  color:#224F83;
+  font-weight: bold;
+  padding-bottom: 0.15rem;
+}
+
+.items-Integer {
+  color:#224F83;
+  font-weight: bold;
+  padding-bottom: 0.15rem;
+  padding-top: 0.6rem;
+}
+
+.items-enum {
+  color:#224F83;
+  font-weight: bold;
+  padding-top: 0.6rem;
+}
+
+.items-check {
+  color:#224F83;
+  font-weight: bold;
+  padding-bottom: 0.15rem;
+  padding-top: 0.6rem;
+}
+
+.modifier-calender {
+  background-color: #FFFFFF!important;
+  border: 1px solid #C3C3C3!important;
+  padding: 0.6rem;
+  border-radius: 0.2rem;
+  width: 9rem;
 }
