--- a/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
+++ b/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
@@ -12,7 +12,8 @@
     (click)="openManager()">
     <clr-icon shape="plus-circle" size="21" title="Manage Annotations"></clr-icon>
   </button>
-  <button
+  <button *ngIf="(annotations$ | async).length> 0"
+          (click)="openEditManager()"
           type="button"
           class="btn btn-icon btn-link">
     Edit
