--- a/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
+++ b/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
@@ -1,23 +1,20 @@
+<!--This modal is for create-->
 <clr-modal class="annotation-modal" [(clrModalOpen)]="open" [clrModalClosable]="false" >
-  <!--[clrModalClosable]="false"-->
   <h3 class="modal-title">
     Create a Cohort-wide Annotation
-    <!--{{ modalTitle }}-->
   </h3>
-
-  <!-- The modal operates in one of two modes: show a list, or show a create form -->
   <div class="modal-body">
-
-     <!--New set annotation form -->
-    <!--<div *ngIf="mode ==='create'">-->
-      <!-- onFinish is just a sentinal to indicate the form is done -->
       <app-set-annotation-create (onFinish)="mode = 'list'"></app-set-annotation-create>
-    <!--</div>-->
+  </div>
+</clr-modal>
 
-    <!-- Show the set annotation list -->
-    <!--<div *ngIf="mode === 'list'">-->
-    <div *ngIf="mode === 'list'">
+
+<!--This modal is for edit-->
+<clr-modal class="annotation-modal" [(clrModalOpen)]="openEdit" [clrModalClosable]="false" >
+  <h3 class="modal-title">
+    Edit Cohort-wide Annotation
+</h3>
+  <div class="modal-body">
       <app-set-annotation-list></app-set-annotation-list>
-    </div>
   </div>
 </clr-modal>
