RW-1092 cancel functionalirt changes with detect changes

--- a/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
+++ b/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
@@ -11,6 +11,9 @@
         </span>
           <!--<clr-icon shape="caret" dir="down" (click)="toggleExpandText()"></clr-icon>-->
         </label>
+        <!--<div class="spin-top-padding">-->
+          <span  class="spinner spinner-inline"> Loading...   </span>
+        <!--</div>-->
       </div>
 
       <!--*ngIf="!expandText"-->
@@ -28,6 +31,7 @@
           [id]="machineName"
           [formControl]="control">
         </textarea>
+
     </div>
 
     <div *ngSwitchCase="kinds.DATE">
