--- a/ui/src/app/cohort-review/set-annotation-list/set-annotation-list.component.html
+++ b/ui/src/app/cohort-review/set-annotation-list/set-annotation-list.component.html
@@ -1,11 +1,11 @@
-<div class="container" [class.is-posting]="posting">
+<div class="container">
   <div class="item">
     <span class="name">Name</span>
     <span class="type">Type</span>
     <span class="delete">Remove</span>
   </div>
   <hr />
-
+<h1>hi{{saveButtonEvent}}</h1>
   <app-set-annotation-item
           *ngFor="let defn of definitions"
           [definition]="defn"
@@ -18,9 +18,9 @@
     <em>No review annotations defined yet.</em>
   </div>
 
-  <div *ngIf="posting" class="spinner spinner-md spin-in-overlay">
-    Loading...
-  </div>
+  <!--<div *ngIf="posting" class="spinner spinner-md spin-in-overlay">-->
+    <!--Loading...-->
+  <!--</div>-->
 </div>
 
 <div class="footer-button">
@@ -32,7 +32,7 @@
     Cancel
   </button>
   <!--[ngClass]="{'save-disable': !saveButton}"-->
-  <button [ngClass]="{'save-disable': !saveButton}"
+  <button
           type="button"
           class="btn btn-primary"
           (click)="saveFromChange()"
@@ -40,4 +40,7 @@
     Save
   </button>
 
+  <div class="spinner spinner-md spin-in-overlay">
+    Loading...
+  </div>
 </div>
