--- a/ui/src/app/views/notebook-list/component.css
+++ b/ui/src/app/views/notebook-list/component.css
@@ -29,6 +29,30 @@
   color: #AAAFB4;
 }
 
+.ellipsis-vertical {
+  width: 21px;
+  height: 21px;
+  margin-left: -9px;
+  color: #216FB4;
+}
+
+.ellipsis-vertical.disabled {
+  color: #AAAFB4;
+  cursor: not-allowed;
+}
+
+.action-item {
+  text-align: left;
+  color: #4A4A4A;
+  background-color: white;
+  fill: none;
+  cursor: pointer;
+  border: none;
+}
+
+.action-item:hover {
+  background-color: #E0EAF1;
+}
 
 .card-area {
   display: flex;
@@ -41,4 +65,14 @@
   font-size: 20px;
   line-height: 24px;
   font-weight: 500;
+}
+
+.header-area {
+  display: flex;
+  align-items: center;
+}
+
+.header-area .name {
+  cursor: pointer;
+  word-break: break-all ;
 }
