RW-1092 on bluc calling method fixes

--- a/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
+++ b/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
@@ -12,7 +12,7 @@
           <!--<clr-icon shape="caret" dir="down" (click)="toggleExpandText()"></clr-icon>-->
         </label>
         <!--<div class="spin-top-padding">-->
-          <span  class="spinner spinner-inline"> Loading...   </span>
+          <!--<span  class="spinner spinner-inline"> Loading...   </span>-->
         <!--</div>-->
       </div>
 
