--- a/ui/src/app/views/rename-modal/component.html
+++ b/ui/src/app/views/rename-modal/component.html
@@ -6,7 +6,7 @@
     <div class="modal-body">
         <div class="form-section">
             <label>New Name: </label>
-            <input id="new-notebook-name" type="text" class="input"
+            <input id="new-name" type="text" class="input"
                    [(ngModel)]="newName">
         </div>
     </div>
