RW-1092 on edit modal data update fixed

--- a/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.html
+++ b/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.html
@@ -107,7 +107,7 @@
             class="btn btn-primary"
             [clrLoading]="posting"
             [disabled]="formIsInvalid"
-            (click)="open = false"
+            (click)="create()"
             >
       Create
     </button>
