--- a/ui/src/app/cohort-review/set-annotation-list/set-annotation-list.component.html
+++ b/ui/src/app/cohort-review/set-annotation-list/set-annotation-list.component.html
@@ -11,19 +11,18 @@
     Loading...
   </div>
 </div>
-<h1>hi{{definitions.length}}</h1>
 
 <div class="footer-button">
   <button
           type="button"
           class="btn btn-link cancel"
-          (click)="cancelFromChange()">
+          (click)="openEdit = false">
     Cancel
   </button>
   <button
           type="button"
           class="btn btn-primary"
-          (click)="saveFromChange()"
+          (click)="openEdit = false"
   >
     Save
   </button>
