--- a/ui/src/app/views/workspace-list/component.html
+++ b/ui/src/app/views/workspace-list/component.html
@@ -152,3 +152,4 @@
   </div>
 </clr-modal>
 <app-confirm-delete-modal [resourceType]="'workspace'" [resource]="resource" (receiveDelete)="receiveDelete($event)"></app-confirm-delete-modal>
+<app-bug-report></app-bug-report>
